2009-08-23  Piotr Fusik  <fox@scene.pl>
* README, CREDITS, win32/Makefile: generate web page from project documentation


2009-08-20  Piotr Fusik  <fox@scene.pl>
* asap.c: conversion from CMS to SAP now handles modules which start
  with zeros instead of 0xFFs


2009-08-19  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap2wav.c, Makefile.in, csharp/Makefile, csharp/asap2wav.cs,
  gsplayer/Makefile, gsplayer/gspasap.c, java/Makefile, java/ASAP2WAV.java,
  win32/Makefile, win32/apollo/ASAP_Apollo.cpp, win32/dshow/asap_dsf.cpp,
  win32/foobar2000/foo_asap.cpp, win32/wasap/wasap.c, win32/winamp/in_asap.c,
  win32/setup/asap.wxs, README:
  added Stereo Double CMC (*.cms). Thanks: Ramos, PG, Poison, Raster.

* asap.c: allow modules with two leading zero bytes and not 0xFFs
  (for CMC and clones)


2009-08-12  Piotr Fusik  <fox@scene.pl>
* INSTALL: updated for MinGW


2009-07-30  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c: WASAP icon in "About"


2009-07-29  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: register Windows Media Player plugin;
  update Path environment variable;
  got rid of "Feature will be installed when required"


2009-07-19  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: "all" now builds all Win32 binaries except XBMC,
  "mingw" just the ones compiled with MinGW (including new libasap.a)

* win32/setup/asap.wxs, win32/Makefile, win32/USAGE:
  setup under construction using Wix

* README, gsplayer/USAGE, win32/gui.rc: some rewordings


2009-07-17  Piotr Fusik  <fox@scene.pl>
* gsplayer/gspasap.def, win32/Makefile:
  compile GSPlayer plugin for Windows NT with MinGW
  (by the way, Windows NT port of GSPlayer is discontinued)


2009-07-15  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: converted from nmake to gmake

* java/Makefile: cleanup


2009-07-10  Piotr Fusik  <fox@scene.pl>
* asap.c, win32/gui.c, win32/wasap/wasap.c: source code indentation


2009-07-02  Piotr Fusik  <fox@scene.pl>
* asap.c: source code shortened using the UWORD macro
