@@ -4,9 +4,10 @@ XASM = xasm -q -o $@
 
 all: asap2wav.exe
 
-asap2wav.exe: asap2wav.cs ASAP.cs ../players/cmc.obx ../players/cms.obx ../players/mpt.obx ../players/rmt4.obx ../players/rmt8.obx ../players/tmc.obx ../players/tm2.obx
+asap2wav.exe: asap2wav.cs ASAP.cs ../players/cmc.obx ../players/cm3.obx ../players/cms.obx ../players/mpt.obx ../players/rmt4.obx ../players/rmt8.obx ../players/tmc.obx ../players/tm2.obx
 	$(CSC) \
-	-res:../players/cmc.obx,cmc -res:../players/cms.obx,cms -res:../players/mpt.obx,mpt \
+	-res:../players/cmc.obx,cmc -res:../players/cm3.obx,cm3 -res:../players/cms.obx,cms \
+	-res:../players/mpt.obx,mpt \
 	-res:../players/rmt4.obx,rmt4 -res:../players/rmt8.obx,rmt8 \
 	-res:../players/tmc.obx,tmc -res:../players/tm2.obx,tm2 \
 	asap2wav.cs ASAP.cs
@@ -16,6 +17,12 @@ ASAP.cs: ASAP.ppcs ../asap.c ../acpu.c ../apokeysnd.c ../asap.h ../asap_internal
 
 ../players/%.obx: ../players/%.asx
 	$(XASM) $<
+
+../players/cmc.obx: ../players/cmc.asx
+	$(XASM) -d CM3=0 $<
+
+../players/cm3.obx: ../players/cmc.asx
+	$(XASM) -d CM3=1 $<
 
 ../players/rmt4.obx: ../players/rmt.asx
 	$(XASM) -d STEREOMODE=0 $<
