@@ -40,7 +40,7 @@ public class asap2wav
 		Console.Write(
 			"Usage: asap2wav [OPTIONS] INPUTFILE...\n" +
 			"Each INPUTFILE must be in a supported format:\n" +
-			"SAP, CMC, CMR, CMS, DMC, MPT, MPD, RMT, TMC, TM8 or TM2.\n" +
+			"SAP, CMC, CM3, CMR, CMS, DMC, MPT, MPD, RMT, TMC, TM8 or TM2.\n" +
 			"Options:\n" +
 			"-o FILE     --output=FILE      Set output file name\n" +
 			"-s SONG     --song=SONG        Select subsong number (zero-based)\n" +
